hw-cbmc/src/smvlang/y.output
Terminals unused in grammar

   EX_Token
   EF_Token
   EG_Token
   E_Token
   A_Token
   UNTIL_Token
   TIMES_Token
   DIVIDE_Token


Grammar

    0 $accept: start $end

    1 start: modules
    2      | formula

    3 modules: module
    4        | modules module

    5 module: module_head sections

    6 module_name: STRING_Token
    7            | QUOTE_Token

    8 module_head: MODULE_Token module_name

    9 $@1: %empty

   10 module_head: MODULE_Token module_name $@1 '(' module_argument_list_opt ')'

   11 sections: %empty
   12         | section sections

   13 semi_opt: %empty
   14         | ';'

   15 section: VAR_Token vardecls
   16        | VAR_Token
   17        | INIT_Token formula semi_opt
   18        | INIT_Token
   19        | TRANS_Token formula semi_opt
   20        | TRANS_Token
   21        | SPEC_Token formula semi_opt
   22        | SPEC_Token
   23        | ASSIGN_Token assignments
   24        | ASSIGN_Token
   25        | DEFINE_Token defines
   26        | DEFINE_Token
   27        | INVAR_Token formula semi_opt
   28        | INVAR_Token
   29        | FAIRNESS_Token formula semi_opt
   30        | FAIRNESS_Token
   31        | EXTERN_Token extern_var semi_opt
   32        | EXTERN_Token

   33 extern_var: variable_name EQUAL_Token QUOTE_Token

   34 vardecls: vardecl
   35         | vardecl vardecls

   36 module_argument: variable_name

   37 module_argument_list: module_argument
   38                     | module_argument_list ',' module_argument

   39 module_argument_list_opt: %empty
   40                         | module_argument_list

   41 type: ARRAY_Token NUMBER_Token DOTDOT_Token NUMBER_Token OF_Token type
   42     | BOOLEAN_Token
   43     | '{' enum_list '}'
   44     | NUMBER_Token DOTDOT_Token NUMBER_Token
   45     | usertype

   46 usertype: module_name
   47         | module_name '(' formula_list ')'

   48 enum_list: enum_element
   49          | enum_list ',' enum_element

   50 enum_element: STRING_Token

   51 vardecl: variable_name ':' type ';'

   52 assignments: assignment
   53            | assignment assignments
   54            | define
   55            | define assignments

   56 assignment: assignment_head '(' assignment_var ')' BECOMES_Token formula ';'

   57 assignment_var: variable_name

   58 assignment_head: init_Token
   59                | NEXT_Token

   60 defines: define
   61        | define defines

   62 define: assignment_var BECOMES_Token formula ';'

   63 formula: term

   64 term: variable_name
   65     | NEXT_Token '(' term ')'
   66     | '(' formula ')'
   67     | '{' formula_list '}'
   68     | INC_Token '(' term ')'
   69     | DEC_Token '(' term ')'
   70     | ADD_Token '(' term ',' term ')'
   71     | SUB_Token '(' term ',' term ')'
   72     | NUMBER_Token
   73     | CASE_Token cases ESAC_Token
   74     | SWITCH_Token '(' variable_name ')' '{' switches '}'
   75     | MINUS_Token term
   76     | term PLUS_Token term
   77     | term MINUS_Token term
   78     | term EQUIV_Token term
   79     | term IMPLIES_Token term
   80     | term XOR_Token term
   81     | term OR_Token term
   82     | term AND_Token term
   83     | NOT_Token term
   84     | AX_Token term
   85     | AF_Token term
   86     | AG_Token term
   87     | term EQUAL_Token term
   88     | term NOTEQUAL_Token term
   89     | term LT_Token term
   90     | term LE_Token term
   91     | term GT_Token term
   92     | term GE_Token term
   93     | term UNION_Token term

   94 formula_list: formula
   95             | formula_list ',' formula

   96 variable_name: qstring_list
   97              | QUOTE_Token

   98 qstring_list: QSTRING_Token
   99             | STRING_Token
  100             | qstring_list DOT_Token QSTRING_Token
  101             | qstring_list DOT_Token STRING_Token
  102             | qstring_list '[' NUMBER_Token ']'
  103             | qstring_list '(' NUMBER_Token ')'

  104 cases: %empty
  105      | cases case

  106 case: formula ':' formula ';'

  107 switches: %empty
  108         | switches switch

  109 switch: NUMBER_Token ':' term ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 47 56 65 66 68 69 70 71 74 103
')' (41) 10 47 56 65 66 68 69 70 71 74 103
',' (44) 38 49 70 71 95
':' (58) 51 106 109
';' (59) 14 51 56 62 106 109
'[' (91) 102
']' (93) 102
'{' (123) 43 67 74
'}' (125) 43 67 74
error (256)
AG_Token (258) 86
AX_Token (259) 84
AF_Token (260) 85
INIT_Token (261) 17 18
TRANS_Token (262) 19 20
SPEC_Token (263) 21 22
VAR_Token (264) 15 16
DEFINE_Token (265) 25 26
ASSIGN_Token (266) 23 24
INVAR_Token (267) 27 28
FAIRNESS_Token (268) 29 30
MODULE_Token (269) 8 10
ARRAY_Token (270) 41
OF_Token (271) 41
DOTDOT_Token (272) 41 44
BOOLEAN_Token (273) 42
EXTERN_Token (274) 31 32
NEXT_Token (275) 59 65
INC_Token (276) 68
DEC_Token (277) 69
CASE_Token (278) 73
ESAC_Token (279) 73
BECOMES_Token (280) 56 62
ADD_Token (281) 70
SUB_Token (282) 71
SWITCH_Token (283) 74
init_Token (284) 58
PLUS_Token (285) 76
STRING_Token (286) 6 50 99 101
QSTRING_Token (287) 98 100
QUOTE_Token (288) 7 33 97
NUMBER_Token (289) 41 44 72 102 103 109
IMPLIES_Token (290) 79
UNION_Token (291) 93
EQUIV_Token (292) 78
XOR_Token (293) 80
OR_Token (294) 81
AND_Token (295) 82
NOT_Token (296) 83
EX_Token (297)
EF_Token (298)
EG_Token (299)
E_Token (300)
A_Token (301)
UNTIL_Token (302)
EQUAL_Token (303) 33 87
NOTEQUAL_Token (304) 88
LT_Token (305) 89
GT_Token (306) 91
LE_Token (307) 90
GE_Token (308) 92
MINUS_Token (309) 75 77
TIMES_Token (310)
DIVIDE_Token (311)
UMINUS (312)
DOT_Token (313) 100 101


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
start (69)
    on left: 1 2, on right: 0
modules (70)
    on left: 3 4, on right: 1 4
module (71)
    on left: 5, on right: 3 4
module_name (72)
    on left: 6 7, on right: 8 10 46 47
module_head (73)
    on left: 8 10, on right: 5
$@1 (74)
    on left: 9, on right: 10
sections (75)
    on left: 11 12, on right: 5 12
semi_opt (76)
    on left: 13 14, on right: 17 19 21 27 29 31
section (77)
    on left: 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32,
    on right: 12
extern_var (78)
    on left: 33, on right: 31
vardecls (79)
    on left: 34 35, on right: 15 35
module_argument (80)
    on left: 36, on right: 37 38
module_argument_list (81)
    on left: 37 38, on right: 38 40
module_argument_list_opt (82)
    on left: 39 40, on right: 10
type (83)
    on left: 41 42 43 44 45, on right: 41 51
usertype (84)
    on left: 46 47, on right: 45
enum_list (85)
    on left: 48 49, on right: 43 49
enum_element (86)
    on left: 50, on right: 48 49
vardecl (87)
    on left: 51, on right: 34 35
assignments (88)
    on left: 52 53 54 55, on right: 23 53 55
assignment (89)
    on left: 56, on right: 52 53
assignment_var (90)
    on left: 57, on right: 56 62
assignment_head (91)
    on left: 58 59, on right: 56
defines (92)
    on left: 60 61, on right: 25 61
define (93)
    on left: 62, on right: 54 55 60 61
formula (94)
    on left: 63, on right: 2 17 19 21 27 29 56 62 66 94 95 106
term (95)
    on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81
    82 83 84 85 86 87 88 89 90 91 92 93, on right: 63 65 68 69 70 71
    75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 109
formula_list (96)
    on left: 94 95, on right: 47 67 95
variable_name (97)
    on left: 96 97, on right: 33 36 51 57 64 74
qstring_list (98)
    on left: 98 99 100 101 102 103, on right: 96 100 101 102 103
cases (99)
    on left: 104 105, on right: 73 105
case (100)
    on left: 106, on right: 105
switches (101)
    on left: 107 108, on right: 74 108
switch (102)
    on left: 109, on right: 108


State 0

    0 $accept: . start $end

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    MODULE_Token   shift, and go to state 4
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    start          go to state 20
    modules        go to state 21
    module         go to state 22
    module_head    go to state 23
    formula        go to state 24
    term           go to state 25
    variable_name  go to state 26
    qstring_list   go to state 27


State 1

   86 term: AG_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 28
    variable_name  go to state 26
    qstring_list   go to state 27


State 2

   84 term: AX_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 29
    variable_name  go to state 26
    qstring_list   go to state 27


State 3

   85 term: AF_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 30
    variable_name  go to state 26
    qstring_list   go to state 27


State 4

    8 module_head: MODULE_Token . module_name
   10            | MODULE_Token . module_name $@1 '(' module_argument_list_opt ')'

    STRING_Token  shift, and go to state 31
    QUOTE_Token   shift, and go to state 32

    module_name  go to state 33


State 5

   65 term: NEXT_Token . '(' term ')'

    '('  shift, and go to state 34


State 6

   68 term: INC_Token . '(' term ')'

    '('  shift, and go to state 35


State 7

   69 term: DEC_Token . '(' term ')'

    '('  shift, and go to state 36


State 8

   73 term: CASE_Token . cases ESAC_Token

    $default  reduce using rule 104 (cases)

    cases  go to state 37


State 9

   70 term: ADD_Token . '(' term ',' term ')'

    '('  shift, and go to state 38


State 10

   71 term: SUB_Token . '(' term ',' term ')'

    '('  shift, and go to state 39


State 11

   74 term: SWITCH_Token . '(' variable_name ')' '{' switches '}'

    '('  shift, and go to state 40


State 12

   99 qstring_list: STRING_Token .

    $default  reduce using rule 99 (qstring_list)


State 13

   98 qstring_list: QSTRING_Token .

    $default  reduce using rule 98 (qstring_list)


State 14

   97 variable_name: QUOTE_Token .

    $default  reduce using rule 97 (variable_name)


State 15

   72 term: NUMBER_Token .

    $default  reduce using rule 72 (term)


State 16

   83 term: NOT_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 41
    variable_name  go to state 26
    qstring_list   go to state 27


State 17

   75 term: MINUS_Token . term

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 42
    variable_name  go to state 26
    qstring_list   go to state 27


State 18

   66 term: '(' . formula ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    formula        go to state 43
    term           go to state 25
    variable_name  go to state 26
    qstring_list   go to state 27


State 19

   67 term: '{' . formula_list '}'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    formula        go to state 44
    term           go to state 25
    formula_list   go to state 45
    variable_name  go to state 26
    qstring_list   go to state 27


State 20

    0 $accept: start . $end

    $end  shift, and go to state 46


State 21

    1 start: modules .
    4 modules: modules . module

    MODULE_Token  shift, and go to state 4

    $default  reduce using rule 1 (start)

    module       go to state 47
    module_head  go to state 23


State 22

    3 modules: module .

    $default  reduce using rule 3 (modules)


State 23

    5 module: module_head . sections

    INIT_Token      shift, and go to state 48
    TRANS_Token     shift, and go to state 49
    SPEC_Token      shift, and go to state 50
    VAR_Token       shift, and go to state 51
    DEFINE_Token    shift, and go to state 52
    ASSIGN_Token    shift, and go to state 53
    INVAR_Token     shift, and go to state 54
    FAIRNESS_Token  shift, and go to state 55
    EXTERN_Token    shift, and go to state 56

    $default  reduce using rule 11 (sections)

    sections  go to state 57
    section   go to state 58


State 24

    2 start: formula .

    $default  reduce using rule 2 (start)


State 25

   63 formula: term .
   76 term: term . PLUS_Token term
   77     | term . MINUS_Token term
   78     | term . EQUIV_Token term
   79     | term . IMPLIES_Token term
   80     | term . XOR_Token term
   81     | term . OR_Token term
   82     | term . AND_Token term
   87     | term . EQUAL_Token term
   88     | term . NOTEQUAL_Token term
   89     | term . LT_Token term
   90     | term . LE_Token term
   91     | term . GT_Token term
   92     | term . GE_Token term
   93     | term . UNION_Token term

    PLUS_Token      shift, and go to state 59
    IMPLIES_Token   shift, and go to state 60
    UNION_Token     shift, and go to state 61
    EQUIV_Token     shift, and go to state 62
    XOR_Token       shift, and go to state 63
    OR_Token        shift, and go to state 64
    AND_Token       shift, and go to state 65
    EQUAL_Token     shift, and go to state 66
    NOTEQUAL_Token  shift, and go to state 67
    LT_Token        shift, and go to state 68
    GT_Token        shift, and go to state 69
    LE_Token        shift, and go to state 70
    GE_Token        shift, and go to state 71
    MINUS_Token     shift, and go to state 72

    $default  reduce using rule 63 (formula)


State 26

   64 term: variable_name .

    $default  reduce using rule 64 (term)


State 27

   96 variable_name: qstring_list .
  100 qstring_list: qstring_list . DOT_Token QSTRING_Token
  101             | qstring_list . DOT_Token STRING_Token
  102             | qstring_list . '[' NUMBER_Token ']'
  103             | qstring_list . '(' NUMBER_Token ')'

    DOT_Token  shift, and go to state 73
    '('        shift, and go to state 74
    '['        shift, and go to state 75

    $default  reduce using rule 96 (variable_name)


State 28

   76 term: term . PLUS_Token term
   77     | term . MINUS_Token term
   78     | term . EQUIV_Token term
   79     | term . IMPLIES_Token term
   80     | term . XOR_Token term
   81     | term . OR_Token term
   82     | term . AND_Token term
   86     | AG_Token term .
   87     | term . EQUAL_Token term
   88     | term . NOTEQUAL_Token term
   89     | term . LT_Token term
   90     | term . LE_Token term
   91     | term . GT_Token term
   92     | term . GE_Token term
   93     | term . UNION_Token term

    PLUS_Token      shift, and go to state 59
    EQUAL_Token     shift, and go to state 66
    NOTEQUAL_Token  shift, and go to state 67
    LT_Token        shift, and go to state 68
    GT_Token        shift, and go to state 69
    LE_Token        shift, and go to state 70
    GE_Token        shift, and go to state 71
    MINUS_Token     shift, and go to state 72

    $default  reduce using rule 86 (term)


State 29

   76 term: term . PLUS_Token term
   77     | term . MINUS_Token term
   78     | term . EQUIV_Token term
   79     | term . IMPLIES_Token term
   80     | term . XOR_Token term
   81     | term . OR_Token term
   82     | term . AND_Token term
   84     | AX_Token term .
   87     | term . EQUAL_Token term
   88     | term . NOTEQUAL_Token term
   89     | term . LT_Token term
   90     | term . LE_Token term
   91     | term . GT_Token term
   92     | term . GE_Token term
   93     | term . UNION_Token term

    PLUS_Token      shift, and go to state 59
    EQUAL_Token     shift, and go to state 66
    NOTEQUAL_Token  shift, and go to state 67
    LT_Token        shift, and go to state 68
    GT_Token        shift, and go to state 69
    LE_Token        shift, and go to state 70
    GE_Token        shift, and go to state 71
    MINUS_Token     shift, and go to state 72

    $default  reduce using rule 84 (term)


State 30

   76 term: term . PLUS_Token term
   77     | term . MINUS_Token term
   78     | term . EQUIV_Token term
   79     | term . IMPLIES_Token term
   80     | term . XOR_Token term
   81     | term . OR_Token term
   82     | term . AND_Token term
   85     | AF_Token term .
   87     | term . EQUAL_Token term
   88     | term . NOTEQUAL_Token term
   89     | term . LT_Token term
   90     | term . LE_Token term
   91     | term . GT_Token term
   92     | term . GE_Token term
   93     | term . UNION_Token term

    PLUS_Token      shift, and go to state 59
    EQUAL_Token     shift, and go to state 66
    NOTEQUAL_Token  shift, and go to state 67
    LT_Token        shift, and go to state 68
    GT_Token        shift, and go to state 69
    LE_Token        shift, and go to state 70
    GE_Token        shift, and go to state 71
    MINUS_Token     shift, and go to state 72

    $default  reduce using rule 85 (term)


State 31

    6 module_name: STRING_Token .

    $default  reduce using rule 6 (module_name)


State 32

    7 module_name: QUOTE_Token .

    $default  reduce using rule 7 (module_name)


State 33

    8 module_head: MODULE_Token module_name .
   10            | MODULE_Token module_name . $@1 '(' module_argument_list_opt ')'

    '('       reduce using rule 9 ($@1)
    $default  reduce using rule 8 (module_head)

    $@1  go to state 76


State 34

   65 term: NEXT_Token '(' . term ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 77
    variable_name  go to state 26
    qstring_list   go to state 27


State 35

   68 term: INC_Token '(' . term ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 78
    variable_name  go to state 26
    qstring_list   go to state 27


State 36

   69 term: DEC_Token '(' . term ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 79
    variable_name  go to state 26
    qstring_list   go to state 27


State 37

   73 term: CASE_Token cases . ESAC_Token
  105 cases: cases . case

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ESAC_Token     shift, and go to state 80
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    formula        go to state 81
    term           go to state 25
    variable_name  go to state 26
    qstring_list   go to state 27
    case           go to state 82


State 38

   70 term: ADD_Token '(' . term ',' term ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 83
    variable_name  go to state 26
    qstring_list   go to state 27


State 39

   71 term: SUB_Token '(' . term ',' term ')'

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    term           go to state 84
    variable_name  go to state 26
    qstring_list   go to state 27


State 40

   74 term: SWITCH_Token '(' . variable_name ')' '{' switches '}'

    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14

    variable_name  go to state 85
    qstring_list   go to state 27


State 41

   76 term: term . PLUS_Token term
   77     | term . MINUS_Token term
   78     | term . EQUIV_Token term
   79     | term . IMPLIES_Token term
   80     | term . XOR_Token term
   81     | term . OR_Token term
   82     | term . AND_Token term
   83     | NOT_Token term .
   87     | term . EQUAL_Token term
   88     | term . NOTEQUAL_Token term
   89     | term . LT_Token term
   90     | term . LE_Token term
   91     | term . GT_Token term
   92     | term . GE_Token term
   93     | term . UNION_Token term

    PLUS_Token      shift, and go to state 59
    EQUAL_Token     shift, and go to state 66
    NOTEQUAL_Token  shift, and go to state 67
    LT_Token        shift, and go to state 68
    GT_Token        shift, and go to state 69
    LE_Token        shift, and go to state 70
    GE_Token        shift, and go to state 71
    MINUS_Token     shift, and go to state 72

    $default  reduce using rule 83 (term)


State 42

   75 term: MINUS_Token term .
   76     | term . PLUS_Token term
   77     | term . MINUS_Token term
   78     | term . EQUIV_Token term
   79     | term . IMPLIES_Token term
   80     | term . XOR_Token term
   81     | term . OR_Token term
   82     | term . AND_Token term
   87     | term . EQUAL_Token term
   88     | term . NOTEQUAL_Token term
   89     | term . LT_Token term
   90     | term . LE_Token term
   91     | term . GT_Token term
   92     | term . GE_Token term
   93     | term . UNION_Token term

    $default  reduce using rule 75 (term)


State 43

   66 term: '(' formula . ')'

    ')'  shift, and go to state 86


State 44

   94 formula_list: formula .

    $default  reduce using rule 94 (formula_list)


State 45

   67 term: '{' formula_list . '}'
   95 formula_list: formula_list . ',' formula

    ','  shift, and go to state 87
    '}'  shift, and go to state 88


State 46

    0 $accept: start $end .

    $default  accept


State 47

    4 modules: modules module .

    $default  reduce using rule 4 (modules)


State 48

   17 section: INIT_Token . formula semi_opt
   18        | INIT_Token .

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    $default  reduce using rule 18 (section)

    formula        go to state 89
    term           go to state 25
    variable_name  go to state 26
    qstring_list   go to state 27


State 49

   19 section: TRANS_Token . formula semi_opt
   20        | TRANS_Token .

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    $default  reduce using rule 20 (section)

    formula        go to state 90
    term           go to state 25
    variable_name  go to state 26
    qstring_list   go to state 27


State 50

   21 section: SPEC_Token . formula semi_opt
   22        | SPEC_Token .

    AG_Token       shift, and go to state 1
    AX_Token       shift, and go to state 2
    AF_Token       shift, and go to state 3
    NEXT_Token     shift, and go to state 5
    INC_Token      shift, and go to state 6
    DEC_Token      shift, and go to state 7
    CASE_Token     shift, and go to state 8
    ADD_Token      shift, and go to state 9
    SUB_Token      shift, and go to state 10
    SWITCH_Token   shift, and go to state 11
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14
    NUMBER_Token   shift, and go to state 15
    NOT_Token      shift, and go to state 16
    MINUS_Token    shift, and go to state 17
    '('            shift, and go to state 18
    '{'            shift, and go to state 19

    $default  reduce using rule 22 (section)

    formula        go to state 91
    term           go to state 25
    variable_name  go to state 26
    qstring_list   go to state 27


State 51

   15 section: VAR_Token . vardecls
   16        | VAR_Token .

    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14

    $default  reduce using rule 16 (section)

    vardecls       go to state 92
    vardecl        go to state 93
    variable_name  go to state 94
    qstring_list   go to state 27


State 52

   25 section: DEFINE_Token . defines
   26        | DEFINE_Token .

    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14

    $default  reduce using rule 26 (section)

    assignment_var  go to state 95
    defines         go to state 96
    define          go to state 97
    variable_name   go to state 98
    qstring_list    go to state 27


State 53

   23 section: ASSIGN_Token . assignments
   24        | ASSIGN_Token .

    NEXT_Token     shift, and go to state 99
    init_Token     shift, and go to state 100
    STRING_Token   shift, and go to state 12
    QSTRING_Token  shift, and go to state 13
    QUOTE_Token    shift, and go to state 14

    $default  reduce using rule 24 (section)
